--- a/src/composer.json
+++ b/src/composer.json
@@ -13,7 +13,8 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.8.*",
         "laravel/socialite": "^4.1",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.5.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
